[project]
name = "databases_library"
description = "A library that allows Envrio databases management"
readme = "README.md"
authors = [
  {name="Nikolaos Kokkos", email="nikolaoskokkos@gmail.com"},
  {name="Ioannis Tsakmakis", email="iotsakmak@gmail.com"}
]
requires-python = ">=3.8"
classifiers=[
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.pipenv]
version = "1.0.0"

dynamic = [
  "version",
]
dependencies = [
  "SQLAlchemy>=2.0.22",
  "setuptools>=67",
  "pydantic==2.5.0",
  "mysql-connector-python>=8.2.0"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=67",
]
