[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "databases_library"
version = "1.0.0"
description = "A library that enables ENVTIO mysql and influx databases management"
authors = ["Ioannis Tsakmakis <itsakmak@envrio.org>","Nikolaos Kokkos <nkokkos@envrio.org>"]

[tool.poetry.dependencies]
python = "^3.8",
SQLAlchemy >= "2.0.22",
setuptools >= "67",
pydantic == "2.5.0",
mysql-connector-python >= "8.2.0"
